app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mormkaji-war-demo-deployment
  labels:
    app: mormkaji-war-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mormkaji-war-demo
  template:
    metadata:
      labels:
        app: mormkaji-war-demo
    spec:
      containers:
        - name: mormkaji-war-demo
          image: kshrdautopilot/mormkaji-war-demo
          ports:
            - containerPort: 4000
