app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mormkaji-war-demo-svc
spec:
  selector:
    app: mormkaji-war-demo
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
